Modal overflow issue fix

--- a/styles/config/override-editor-background.less
+++ b/styles/config/override-editor-background.less
@@ -2,7 +2,8 @@
 
 atom-text-editor,
 atom-text-editor.editor {
-  background: @tab-background-color-active }
+  background: @tab-background-color-active;
+  background: @base-background-color !important }
 
 .tab-bar .tab.active {
   background: @tab-background-color-active }
